Proposal refactoring